# hydra

./: .clang-format  .gitattributes  .gitignore  .gitmessage  .gitmodules  .mailmap  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  CREDITS  CREDITS.md  Contributors.md  LICENSE  MAINTAINERS  Makefile  README  README.md  README.rst  TODO  Todo  Todo.txt  Vagrantfile  build.config  compile.sh  make.sh  makeISO.sh  makeISODocker.sh  setup-environment.sh  startup.nsh
.github/: CODEOWNERS  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml  discord.yml  ubuntu.yml
BOB/: Makefile  README.md
BOB/Misc/: ovmfv.fd  startup.nsh
BOB/Source/: bob.hpp  main.c  main.cpp
Boot/: CMakeLists.txt
Bootloader/: Debug Sheet  Makefile
Bootloader/Source/: boot.s  disk.s  extension.s  gdt.s
Documentation/: BuildInstructions.md  CONTRIB.N11  CodingStyle.md  ROADMAP  TODO
Documentation/Contributing/: 1. Getting Started.rst  2. Reading Documentation.rst  3. Making Changes.rst  4. Submitting Patches.rst  EmailClients.rst  Getting Started.md  Reading Documentation.md  Stable Patches.md  Submitting Patches.md
Documentation/FileSystem/: fs-hierarchy.txt
Documentation/Maintainer/: pull-requests.rst
Documentation/UserGuide/: BUGS  BuildInstructions  README
Echo/: CONTRIBUTING.md
Hydra/: kernel.elf
Inferno/: CMakeLists.txt  Makefile  linker.ld  main.cpp
Inferno/Drivers/COM/: COM.cpp  COM.hpp
Inferno/Drivers/GDT/: GDT.hpp
Inferno/Include/: BOB.hpp  COM.hpp  CPUID.hpp  Config.hpp  Framebuffer.hpp  GDT.hpp  IO.hpp  Interrupts.hpp  Syscall.hpp
Inferno/Include/Drivers/GDT/: GDT.hpp
Inferno/Include/Interrupts/: DoublePageFault.hpp  PageFault.hpp  Syscall.hpp
Inferno/Include/Memory/: Mem_.hpp  Memory.hpp  Paging.hpp
Inferno/Source/: BIOS.cpp  COM.cpp  CPUID.s  IO.cpp  IO.h  Inferno.cpp  Inferno.hpp  Interrupts.cpp  Syscall.cpp  UEFI.cpp  Vector.h  main.cpp
Inferno/Source/Devices/: BlockDevices.h  CharacterDevices.h  Device.h  DeviceInfo.h  GenericDevice.h
Inferno/Source/Drivers/ACPI/: ACPI.cpp  ACPI.hpp
Inferno/Source/Drivers/AHCI/: AHCI.cpp  AHCI.hpp
Inferno/Source/Drivers/COM/: COM.cpp  COM.hpp
Inferno/Source/Drivers/GDT/: GDT.cpp  GDT.hpp  TSS.s
Inferno/Source/Drivers/Graphics/GOP/: GOP.cpp  GOP.hpp
Inferno/Source/Drivers/IO/: IO.cpp  IO.hpp
Inferno/Source/Drivers/Interrupts/: Interrupts.cpp  Interrupts.hpp
Inferno/Source/Drivers/Interrupts/GDT/: GDT.hpp  GDT.s
Inferno/Source/Drivers/Interrupts/IDT/: IDT.cpp  IDT.hpp
Inferno/Source/Drivers/Memory/: Memory.cpp  Memory.hpp
Inferno/Source/Drivers/PCI/: PCI.cpp  PCI.hpp
Inferno/Source/Drivers/PIT/: PIT.cpp  PIT.hpp
Inferno/Source/Drivers/PS2/Keyboard/: Keyboard.hpp
Inferno/Source/Drivers/PS2/Mouse/: Mouse.hpp
Inferno/Source/Drivers/Sound/PC/: Sound.cpp  Sound.hpp
Inferno/Source/FileSystem/ext2/: File.h  ext2_fs.h  ext2_types.h
Inferno/Source/FileSystem/ustar/: ustar.h
Inferno/Source/Graphics/Font/: Font.cpp  Font.hpp  string.hpp
Inferno/Source/Graphics/Images/TGA/: TGA.hpp
Inferno/Source/Interrupts/: DoublePageFault.cpp  PageFault.cpp  Syscall.cpp
Inferno/Source/Logging/: utility.h
Inferno/Source/Memory/: KBuffer.h  Mem_.cpp  Memory.cpp  kmalloc.h
Inferno/include/: Config.hpp
Inferno/include/Drivers/COM/: COM.hpp
Inferno/include/Drivers/IDT/: IDT.hpp
Inferno/src/: main.cpp
Inferno/src/Drivers/GDT/: Load.s
Inferno/src/Drivers/IO/: IO.cpp
Kernel/: CMakeLists.txt  OVMF_VARS.fd  README  README.md  gdt.cpp  graphics.h  kernel.cpp  main.cpp  memory.h  os.cpp  os.h  panic.cpp  string.h
Kernel/GUI/: Display.cpp  Display.h  Window.cpp  Window.h
Kernel/Include/: BOB.h  COM.h  COM.hpp  CPUID.hpp  Config.hpp  Framebuffer.hpp  GDT.h  GDT.hpp  IO.hpp  Log.h  TTY.h  UEFI.h  cmos.h  cpuid.h
Kernel/Source/: COM.cpp  IO.cpp  Log.cpp  TTY.cpp  cmos.cpp  cpuid.cpp  main.cpp
Kernel/graphics/: graphics.cpp  graphics.h  graphics.hpp
Libraries/: .gitignore  CMakeLists.txt
Libraries/LibC/: .gitignore  CMakeLists.txt  COPYRIGHT  CREDITS  README  assert.cpp  assert.h  ctype.cpp  ctype.h  errno.h  float.h  limits.h  mman.cpp  process.cpp  process.h  sched.cpp  signal.cpp  signal.h  stdarg.h  stdint.h  stdio.cpp  stdio.h  stdlib.cpp  stdlib.h  string.cpp  string.h  stub  test.txt  time.h  unistd.cpp  unistd.h
Libraries/LibC/include/: stddef.h  time.h
Libraries/LibC/include/arpa/: inet.h
Libraries/LibC/include/pthread/: pthread.h
Libraries/LibC/include/sys/: IO.h  cdefs.h
Libraries/LibC/pthread/: pthread.h  pthreadtypes.h
Libraries/LibC/src/: abort.cpp  strlen.cpp
Libraries/LibC/sys/: cdefs.h  types.h
Meta/: echo.sh
OVMFbin/: OVMF_VARS-pure-efi.fd
Programs/: README
Toolchain/: BuildIt.sh  CleanDir.sh  README
boot/: .gitignore  CMakeLists.txt  README.md  main.cpp
boot/Source/: main.cpp
bootloader/: Makefile
docs/: BuildInstructions.md  BuildInstructions.rst  CodingStyle.md  Style.cpp  roadmap.md
etc/: OVMF_VARS-pure-efi.fd
gnu-efi/: Makefile
kernel/: CMakeLists.txt  Makefile  README.md  graphics.cpp  graphics.h  kernel.cpp  kernel.ld  memory.cpp  os.cpp
kernel/src/: gdt.h  (+12 more)
lib/libc/: CMakeLists.txt  assert.h  brk.cpp  crt0.s  ctype.cpp  ctype.h  errno.h  limits.h  stdint.h  stdio.h  stdlib.cpp  stdlib.h  string.h  time.h  unistd.h
lib/libc/bits/: pthread_integration.h
lib/libc/include/: ctype.h  stdarg.h
lib/libc/pthread/: pthreadtypes.h
lib/libc/sys/: IO.h  cdefs.h  io.cpp  io.h  types.h
lib/libm/: .gitignore  CMakeLists.txt  math.cpp
src/: graphics.cpp  graphics.h  io.cpp  os.cpp  os.h  panic.cpp
std/: AllOf.h  AnyOf.h  Array.h  Assertions.h  Atomic.h  Badge.h  Base64.cpp  Base64.h  BinaryBufferWriter.h  BinaryHeap.h  BinarySearch.h  BitCast.h  BitStream.h  Bitmap.h  BitmapView.h  ExtraMathConstants.h  Find.h  Forward.h  HashFunctions.h  IterationDecision.h  Iterator.h  Memory.h  Optional.h  Span.h  StdLibExtraDetails.h  StdLibExtras.h  StringHash.h  StringUtils.h  Syscall.h  Traits.h  TypedTransfer.h  Types.h  UnixTypes.h  Vector.h  printf.cpp
toolchain/: .gitignore  BuildIt.sh
www/: stub
(+204 files in other folders)
