file(GLOB_RECURSE LIBC_SOURCES *.cpp)

file(GLOB_RECURSE LIBC_HEADER include/*.h)

set(CMAKE_CXX_FLAGS "-ffreestanding -Wno-builtin-declaration-mismatch")
add_link_options(-nostdlib)
add_library(C SHARED ${LIBC_SOURCES})

SET_TARGET_PROPERTIES (C PROPERTIES PUBLIC_HEADER "${LIBC_HEADER}")

set(LIBRARY_VERSION_MAJOR 0)
set(LIBRARY_VERSION_STRING 0.1)

install (
	TARGETS C
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
